// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/mentions/demo/async.vue correctly 1`] = `
<div class="xy-mentions"><textarea dropdownclassname="" rows="1"></textarea>
  <!---->
</div>
`;

exports[`renders ./components/mentions/demo/basic.vue correctly 1`] = `
<div class="xy-mentions"><textarea dropdownclassname="" autofocus="" rows="1"></textarea>
  <!---->
</div>
`;

exports[`renders ./components/mentions/demo/form.vue correctly 1`] = `
<form class="xy-form xy-form-horizontal">
  <div class="xy-form-item">
    <div class="xy-row xy-form-row">
      <div class="xy-col xy-col-6 xy-form-item-label"><label for="form_item_coders" class="xy-form-item-required" title="Top coders">Top coders
          <!---->
        </label></div>
      <div class="xy-col xy-col-18 xy-form-item-control">
        <div class="xy-form-item-control-input">
          <div class="xy-form-item-control-input-content">
            <div class="xy-mentions"><textarea dropdownclassname="" rows="1" id="form_item_coders"></textarea>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div class="xy-form-item">
    <div class="xy-row xy-form-row">
      <div class="xy-col xy-col-6 xy-form-item-label"><label for="form_item_bio" class="xy-form-item-required" title="Bio">Bio
          <!---->
        </label></div>
      <div class="xy-col xy-col-18 xy-form-item-control">
        <div class="xy-form-item-control-input">
          <div class="xy-form-item-control-input-content">
            <div class="xy-mentions"><textarea dropdownclassname="" rows="3" placeholder="You can use @ to ref user here" id="form_item_bio"></textarea>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div class="xy-form-item">
    <div class="xy-row xy-form-row">
      <!---->
      <div class="xy-col xy-col-12 xy-col-offset-5 xy-form-item-control">
        <div class="xy-form-item-control-input">
          <div class="xy-form-item-control-input-content"><button class="xy-btn xy-btn-primary" type="button">
              <!----><span>Submit</span>
            </button><button style="margin-left: 8px;" class="xy-btn xy-btn-default" type="button">
              <!----><span>Reset</span>
            </button></div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
</form>
`;

exports[`renders ./components/mentions/demo/placement.vue correctly 1`] = `
<div class="xy-mentions"><textarea dropdownclassname="" rows="1"></textarea>
  <!---->
</div>
`;

exports[`renders ./components/mentions/demo/prefix.vue correctly 1`] = `
<div class="xy-mentions"><textarea dropdownclassname="" rows="1" placeholder="input @ to mention people, # to mention tag"></textarea>
  <!---->
</div>
`;

exports[`renders ./components/mentions/demo/readonly.vue correctly 1`] = `
<div>
  <div style="margin-bottom: 10px;">
    <div class="xy-mentions xy-mentions-disabled"><textarea dropdownclassname="" disabled="" rows="1" placeholder="this is disabled Mentions"></textarea>
      <!---->
    </div>
  </div>
  <div class="xy-mentions"><textarea dropdownclassname="" rows="1" placeholder="this is readOnly a-mentions" readonly=""></textarea>
    <!---->
  </div>
</div>
`;

exports[`renders ./components/mentions/demo/status.vue correctly 1`] = `
<div class="xy-space xy-space-vertical">
  <div class="xy-space-item" style="margin-bottom: 8px;">
    <div class="xy-mentions xy-mentions-status-error"><textarea dropdownclassname="" autofocus="" rows="1" status="error"></textarea>
      <!---->
    </div>
  </div>
  <!---->
  <div class="xy-space-item">
    <div class="xy-mentions xy-mentions-status-warning"><textarea dropdownclassname="" autofocus="" rows="1" status="warning"></textarea>
      <!---->
    </div>
  </div>
  <!---->
</div>
`;
